--- a/package.json
+++ b/package.json
@@ -16,28 +16,31 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.7.0",
-    "@react-navigation/stack": "^5.7.0",
-    "expo": "~38.0.8",
-    "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7",
-    "react-navigation-stack": "react-navigation/stack"
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "expo": "~48.0.7",
+    "expo-status-bar": "^1.4.4",
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0",
+    "react-native": "^0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "~4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.12",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@types/jest": "^26.0.4",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-native": "^0.63.1",
-    "@types/react-test-renderer": "^16.9.2",
-    "typescript": "^3.9.6"
+    "@babel/core": "^7.21.3",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-native": "^0.71.3",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.2.1",
+    "typescript": "^4.9.5"
   },
   "private": true
 }
